<resources>
    <string name="app_name">HomeWork</string>
    <string name="auth_welcome">Welcome!</string>
    <string name="auth_sign_in">sign in</string>
    <string name="auth_user_login">login</string>
    <string name="auth_user_password">password</string>
    <string name="auth_register_account">Already have an account?</string>
    <string name="ok">ok</string>
    <string name="reg_form_title">Registration form</string>
    <string name="reg_register">register</string>
    <string name="reg_user_password">password</string>
    <string name="reg_user_login">login</string>
    <string name="create_new_loan">create new loan request</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="phone_number">phone number</string>
    <string name="amount">amount</string>
    <string name="current_loan_conditions">Current loan conditions</string>
    <string name="create_new_loan_title">Fill out the form please</string>
    <string name="send_new_loan">send new loan request</string>
    <string name="title_send_loan_dialog">New request send successfully</string>
    <string name="user_name_empty">please enter username</string>
    <string name="user_password_empty">please enter password</string>
    <string name="first_name_empty">please enter first name</string>
    <string name="last_name_empty">please enter last name</string>
    <string name="phone_number_empty">please enter phone number</string>
    <string name="amount_empty">please enter amount</string>
    <string name="amount_max_value">amount exceeds the maximum value</string>
    <string name="amount_zero">amount is zero</string>
    <string name="unknown_error">unknown error</string>
    <string name="state_data">State:%1$s</string>
    <string name="id_loan_data">Id:%1$d</string>
    <string name="date_data">Date: %1$s</string>
    <string name="first_name_data">First name: %1$s</string>
    <string name="last_name_data">Last name: %1$s</string>
    <string name="phone_number_data">Phone number: %1$s</string>
    <string name="period_data">Period: %1$d month</string>
    <string name="percent_data">Percent: %1$.2f %%</string>
    <string name="amount_data">Amount: %1$.4f ₽</string>
    <string name="max_amount_data">Max amount: %1$.4f ₽</string>
    <string name="info_for_client">Wait, a bank employee will contact you as soon as possible to clarify the details</string>

</resources>